--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<div class="contenedor">
-			<h2 class="logotipo">El Machirulo</h2>
+			<h2 class="logotipo">NOHA BENJAMIN</h2>
 			<nav>
 				<a href="#" class="activo">Inicio</a>
 				<a href="#">Programas</a>
