--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 						<div class="pelicula">
 							<a href="#"><img src="img/4.png" alt=""></a>
 						</div>
+						<div class="pelicula">
+							<a href="#"><img src="img/8.jpg" alt=""></a>
+						</div>
 					</div>
 				</div>
 
