--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 						<div class="pelicula">
 							<a href="#"><img src="img/8.jpg" alt=""></a>
 						</div>
+						<div class="pelicula">
+							<a href="#"><img src="img/9.png" alt=""></a>
+						</div>
+						<div class="pelicula">
+							<a href="#"><img src="img/10.jpg" alt=""></a>
+						</div>
 					</div>
 				</div>
 
